# taxi-fare-api

./: Dockerfile  Makefile  model.joblib  predict.py  pyproject.toml  requirements.txt
TaxiFareModel/: params.py
api/: fast.py
