[tool.poetry]
name = "tfm_predictinprod"
version = "0.1.0"
description = ""
authors = ["Adrien Carpentier <moi@adriencarpentier.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = ">=9"
setuptools = ">=26"
wheel = ">=0.29"
pandas = "^1.2.4"
pytest = "^6.2.4"
coverage = "^5.5"
flake8 = "^3.9.2"
black = "^21.5b1"
yapf = "^0.31.0"
python-gitlab = "^2.7.1"
twine = "^3.4.1"
six = "1.14.0"
numpy = "1.18.5"
scikit-learn = "0.22"
joblib = "^1.0.1"
memoized-property = "^1.0.3"
mlflow = "^1.17.0"
s3fs = "^2021.5.0"
gcsfs = "^2021.5.0"
google-cloud-storage = "^1.38.0"
termcolor = "^1.1.0"
uvicorn = "^0.13.4"
fastapi = "^0.65.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
